# iab-content-classifier

./: .gitignore  README.md  app.py  cache.py  cascading_classifier.py  content_taxonomy_3.1.tsv  multimodal_backbone.py  pipeline.py  pyproject.toml  taxonomy.py  video_processor.py
colab/: setup.ipynb
data/: eval_train.json  features.pt  features.smoke.pt  labels.csv  labels.example.csv  labels.smoke.csv  profile_baseline.json  profile_postdedup.json  profile_postmlx.json
docs/superpowers/specs/: 2026-06-20-detect-gated-ocr-design.md
models/: 150.pt  __root__.pt  training_summary.json
scripts/: build_features.py  build_labels_from_folders.py  build_taxonomy_folders.py  evaluate.py  profile_pipeline.py  sort_search_folders.py  train_classifier.py
tests/: test_ocr_cascade.py
