[project]
name = "iab-content-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "opencv-python>=4.13.0.92",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.6.2",
    "mlx-whisper>=0.4.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Flat layout: the project is a set of top-level modules, not a package dir.
# Declaring py-modules explicitly disables setuptools auto-discovery, which
# otherwise errors on sibling dirs (data/, colab/, iab/, models/).
[tool.setuptools]
py-modules = [
    "app",
    "cache",
    "cascading_classifier",
    "multimodal_backbone",
    "pipeline",
    "taxonomy",
    "video_processor",
]
